Add new project to day2_list_tuple_function_if_statement_projects.ipynb

--- a/day2_list_tuple_function_if_statement_projects.ipynb
+++ b/day2_list_tuple_function_if_statement_projects.ipynb
@@ -281,16 +281,58 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0c15481-690a-4d29-b134-baedca134eb7",
+   "id": "93adb86d-5991-4e92-8bb3-60aa8406254f",
    "metadata": {},
    "source": [
-    "### Thats it!"
+    "## Simple Calculator\n",
+    "### This project aims to creat a program that takes two numbers and an operater from the user, then displays the calculation result."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "c3f23f86-b106-47c4-8823-46c7d69ad08e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter first number:  144\n",
+      "Enter an Operator:  /\n",
+      "Enter Second Number:  12\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_number = float(input(\"Enter first number: \"))\n",
+    "operator = input(\"Enter an Operator: \")\n",
+    "second_number = float(input(\"Enter Second Number: \"))\n",
+    "if operator == \"+\":\n",
+    "    print(first_number + second_number)\n",
+    "elif operator == \"-\":\n",
+    "    print(first_number - second_number)\n",
+    "elif operator == \"*\":\n",
+    "    print(first_number * second_number)\n",
+    "elif operator == \"/\":\n",
+    "    print(first_number / second_number)\n",
+    "elif operator == \"**\":\n",
+    "    print(first_number ** second_number)\n",
+    "else:\n",
+    "    print(\"Invalid Operator!\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba18ab80-eafa-49c5-86f2-ab551c41ebff",
+   "id": "e247bd51-3351-496d-9a8f-3c16789e8fbb",
    "metadata": {},
    "outputs": [],
    "source": []
