--- a/day3_dictionary_while_loop_practice_projects.ipynb
+++ b/day3_dictionary_while_loop_practice_projects.ipynb
@@ -2,6 +2,23 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "bfff92ca-32da-4679-b922-7c2da2b9ce85",
+   "metadata": {},
+   "source": [
+    "## Third Day of My Python Learning Journey\n",
+    "### Dictionary and While Loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "891f2d84-ab81-4244-a765-bfd97a919e54",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "d38e6c19-5771-4a5b-abda-ea3f66ba6572",
    "metadata": {},
    "source": [
@@ -11,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 1,
    "id": "0c7119eb-695b-4814-bf97-a19beb200385",
    "metadata": {},
    "outputs": [],
@@ -25,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 2,
    "id": "48311045-1a12-4ee9-b529-f30cf39b601b",
    "metadata": {},
    "outputs": [],
@@ -39,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 3,
    "id": "cc748de4-1259-413d-9f7d-0a081238691a",
    "metadata": {},
    "outputs": [
@@ -57,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 4,
    "id": "a12b61aa-ecb3-471b-9790-d4a072ea0522",
    "metadata": {},
    "outputs": [
@@ -75,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 5,
    "id": "54986a58-378a-4ee6-bf8e-ee0c8bbdc889",
    "metadata": {},
    "outputs": [],
@@ -85,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 6,
    "id": "031f4262-2062-4894-8dce-25bde0088888",
    "metadata": {},
    "outputs": [
@@ -103,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 7,
    "id": "cac01ac3-303e-4f40-8cba-d90ea5abfa7e",
    "metadata": {},
    "outputs": [],
@@ -113,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 8,
    "id": "f2bb3e40-a5c9-47e1-a08c-adddd3d437bf",
    "metadata": {},
    "outputs": [
@@ -131,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 9,
    "id": "53db6885-442f-4581-ba24-2130b03c50b9",
    "metadata": {},
    "outputs": [],
@@ -141,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 10,
    "id": "fc9dfbd5-dac1-4982-8259-abf5470d2f7d",
    "metadata": {},
    "outputs": [
@@ -159,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 11,
    "id": "ffead9ea-bc33-4763-9ae1-2df5c0d5f3b3",
    "metadata": {},
    "outputs": [],
@@ -169,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 12,
    "id": "44cec4f6-c01e-4e66-8784-ee3f838b7bb2",
    "metadata": {},
    "outputs": [
@@ -187,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 13,
    "id": "71303900-7b64-47fb-a7cf-11a7c3e02e86",
    "metadata": {},
    "outputs": [
@@ -205,17 +222,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 14,
    "id": "3a177264-0bd8-4247-ac3f-6eaf56f50774",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_values(['Alice', 22, 'Computer Science', 3.8])"
+       "dict_values(['Alice', 22, 'Computer science', 3.8])"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 15,
    "id": "67f16741-c2db-4abf-bf8e-2295ac0b9904",
    "metadata": {},
    "outputs": [
@@ -234,7 +251,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_values(['Alice', 22, 'Computer Science', 3.8])\n"
+      "dict_values(['Alice', 22, 'Computer science', 3.8])\n"
      ]
     }
    ],
@@ -244,8 +261,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "id": "36c48602-e18e-41e4-a2a9-c1807cf668b9",
+   "execution_count": 16,
+   "id": "d075ab19-1b9a-42a3-b271-874416745805",
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +279,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 17,
+   "id": "36c48602-e18e-41e4-a2a9-c1807cf668b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alice\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(student.get(\"name\", \"N/A\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "cd25d7e5-a915-49d5-a6c6-c8be890b961c",
    "metadata": {},
    "outputs": [
@@ -280,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 19,
    "id": "dfba05f8-23ac-4cbd-8d03-7b305542f1d0",
    "metadata": {},
    "outputs": [
@@ -298,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 20,
    "id": "88ec8193-c184-4ca7-9486-ddbd5052654c",
    "metadata": {},
    "outputs": [],
@@ -308,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 21,
    "id": "0c595230-0239-46f4-afdc-724a80a3113a",
    "metadata": {},
    "outputs": [
@@ -316,7 +351,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': 'Smith', 'age': 22, 'major': 'Computer Science', 'GPA': 3.8, 'city': 'New York'}\n"
+      "{'name': 'Smith', 'age': 22, 'major': 'Computer science', 'GPA': 3.8, 'city': 'New York'}\n"
      ]
     }
    ],
@@ -326,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 22,
    "id": "641029d0-17da-49ac-b3bf-5eec522354ac",
    "metadata": {},
    "outputs": [
@@ -361,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 23,
    "id": "d49f4519-51d1-4813-a7ab-86b42d8c3fc3",
    "metadata": {},
    "outputs": [
@@ -382,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 24,
    "id": "4cd008de-83d5-45c3-b4af-db22bbb594e4",
    "metadata": {},
    "outputs": [],
@@ -392,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 25,
    "id": "bff97cdf-ed88-4598-8675-d355f5cb950f",
    "metadata": {},
    "outputs": [
@@ -400,7 +435,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': 'Smith', 'age': 22, 'major': 'Computer Science', 'city': 'New York', 16: 'good', 18: 'very_good', 20: 'great'}\n"
+      "{'name': 'Smith', 'age': 22, 'major': 'Computer science', 'city': 'New York', 16: 'good', 18: 'very_good', 20: 'great'}\n"
      ]
     }
    ],
@@ -410,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 26,
    "id": "bf69c5ee-c658-46ba-a774-464d319b95e8",
    "metadata": {},
    "outputs": [
@@ -428,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 27,
    "id": "31d5fa81-25ce-49cf-b88f-f68e82c2374d",
    "metadata": {},
    "outputs": [
@@ -436,7 +471,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{}\n"
+      "{16: 'good', 18: 'very_good', 20: 'great'}\n"
      ]
     }
    ],
@@ -446,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 28,
    "id": "26045839-6eb2-4cf5-b947-64168621a536",
    "metadata": {},
    "outputs": [
@@ -454,7 +489,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': 'Smith', 'age': 22, 'major': 'Computer Science', 'city': 'New York', 16: 'good', 18: 'very_good', 20: 'great'}\n"
+      "{'name': 'Smith', 'age': 22, 'major': 'Computer science', 'city': 'New York', 16: 'good', 18: 'very_good', 20: 'great'}\n"
      ]
     }
    ],
@@ -489,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "id": "35fb6001-f64b-4915-b545-c9a973669f5d",
    "metadata": {},
    "outputs": [
@@ -536,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "4f90e4eb-cdce-409a-a91f-4a412dade80a",
    "metadata": {},
    "outputs": [
@@ -561,7 +596,7 @@
     "guess_limit = 3\n",
     "guess_count = 0\n",
     "out_of_guesses = False\n",
-    "while guess != secret_name and not(out_of_guesses):\n",
+    "while guess != secret_name and not out_of_guesses:\n",
     "    if guess_count < guess_limit:\n",
     "        guess_count += 1\n",
     "        guess = input(\"Enter guess: \")\n",
@@ -573,6 +608,14 @@
     "else:\n",
     "    print(\"YOU WIN!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "685542ee-6981-402d-9ee7-a04990641235",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -592,27 +635,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "bd0ce8ca-3d85-42b1-bfce-0ad9fcacca54",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter guess:  khkjh\n",
-      "Enter guess:  kj;km\n",
-      "Enter guess:  kjk\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Out of Guesses, YOU LOSE!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "secret_name = \"Python\"\n",
     "guess = \"\"\n",
@@ -634,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0fc9197-a10e-48c5-8488-9725dfa902a1",
+   "id": "51e8027c-0a1a-4525-9d41-fffadbefe466",
    "metadata": {},
    "outputs": [],
    "source": []
