Update day6_comments_try_except_block_practice.ipynb and Add day6_comments_try_except_block_project.ipynb

--- a/day6_comments_try_except_block_practice.ipynb
+++ b/day6_comments_try_except_block_practice.ipynb
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "id": "ca473404-fa01-4510-b448-d1167eb0dc78",
    "metadata": {},
    "outputs": [
@@ -324,8 +324,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "5ebd2189-5020-472c-aa5c-54d5ad52ede7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your number:  l\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Invalid Input\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    number = int(input(\"Enter your number: \"))\n",
+    "    value = 10/0\n",
+    "    print(number)\n",
+    "except ZeroDivisionError as err:      # \"err\" here is a variable\n",
+    "    print(err)\n",
+    "except ValueError:\n",
+    "    print(\"Invalid Input\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "b0e60045-712b-4f53-8977-886ddc128e3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your number:  f\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Invalid Input\n",
+      "division by zero\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    number = int(input(\"Enter your number: \"))\n",
+    "    print(number)\n",
+    "except ValueError:\n",
+    "    print(\"Invalid Input\")\n",
+    "try:\n",
+    "    value = 10/0\n",
+    "except ZeroDivisionError as err:      # \"err\" here is a variable\n",
+    "    print(err)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "cc691a47-265b-4747-aae1-72d63d39bc66",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your number:  4\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "division by zero\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    number = int(input(\"Enter your number: \"))\n",
+    "    print(number)\n",
+    "except ValueError:\n",
+    "    print(\"Invalid Input\")\n",
+    "try:\n",
+    "    value = 10/0\n",
+    "except ZeroDivisionError as err:      # \"err\" here is a variable\n",
+    "    print(err)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6898aa16-65e2-4a94-bb88-78d2bcc71d0f",
    "metadata": {},
    "outputs": [],
    "source": []
