Update day7_classes_objects_practice.ipynb with latest changes

--- a/day7_classes_objects_practice.ipynb
+++ b/day7_classes_objects_practice.ipynb
@@ -14,7 +14,7 @@
    "id": "214bcb32-01aa-458e-ad1b-09bc60843a9a",
    "metadata": {},
    "source": [
-    "##### Not all information, not all data, and not all thing can be represented using strings, numbers, or booleans. So what we can do with **classes** and **objects** is we can basically creat our own data types for every thing we want in Python. we could creat like a phone data type and it could represent a phone. so we could store all the information we would ever want to know about our phone. In Python we could creat a **class** for it. class is another data type that we could model a real world object.\n",
+    "##### Not all information, not all data, and not all thing can be represented using strings, numbers, or booleans. So what we can do with **classes** and **objects** is we can basically **creat** our own **data types** for every thing we want in Python. we could creat like a phone data type and it could represent a phone. so we could store all the information we would ever want to know about our phone. In Python we could creat a **class** for it. In other words, class is another data type that we could model a real world object.\n",
     "#### Let's model a student:\n",
     "##### We don't have a student data type and we can't really represent a student in just a single string or a number. So what we can actually do is we can create a **class** for a student. And we are basically creating like a student data type. To do this we creat another Python file and name it student.py ."
    ]
@@ -112,13 +112,73 @@
    "id": "138d5a9f-5a71-4fb9-b000-4a434935f49c",
    "metadata": {},
    "source": [
-    "##### When we were passing in all of the different values (Jim, science, ...), those were getting passed into the init function(in student.py). **self.name = name** means the actual object's name (self.name) is going to be equal to the name that we passed in. **self.name** is an attribute of the student. So the student storing a name, major, and GPA. Or we can say **self.name = name**, assign the actual attribute to the object (It's gonna say, the name of the student (self.name) is going to be equal to the name (= name) that we passed in). so when we say **self** , it's refering to the actual objects."
+    "##### When we were passing in all of the different values (Jim, science, ...), those were getting passed into the init function(in student.py). **self.name = name** means the actual object's name (self.name) is going to be equal to the name that we passed in. **self.name** is an attribute of the student. So the student storing a name, major, and GPA. Or we can say **self.name = name**, assign the **actual** attribute to the object (It's gonna say, the name of the student (self.name) is going to be equal to the name (= name) that we passed in). so when we say **self** , it's refering to the actual objects."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "2ee330e7-ede7-4a9f-ac20-9ee5c5cd7157",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32bf15fc-5604-49ad-882e-b80d7f307323",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68769db9-9fd7-4575-b473-502d29483126",
+   "metadata": {},
+   "source": [
+    "##### we use **classes** and **objects** in programming (especially in python) to help us:\n",
+    "##### 1. **Organize code better**\n",
+    "##### 2. **Reuse code easily**\n",
+    "##### 3. **Model real worldthings**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ed4f5f0-47ee-479e-879a-08832be9a9c3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9bde5ea-c3d1-486e-b7e2-344b0683b093",
+   "metadata": {},
+   "source": [
+    "### What is **self** in Python:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9fe70e98-a4c3-41c8-b7f9-4f911fcf33d5",
+   "metadata": {},
+   "source": [
+    "##### **self** is used to show that the value belongs to the object.\n",
+    "##### For example, self.name = 'Vahid' means the object's name is 'Vahid'.\n",
+    "##### So, **self.name** means **the name of this object**\n",
+    "##### Simply think of self as **\"me\"** for the object. It's gonna say: This object's name is Vahid."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "98af4f59-9e34-4bea-9178-f683c90fa4a8",
+   "metadata": {},
+   "source": [
+    "##### In Def __init__(self, name), self refers to the **object that will be created**. It allows the function to **store the name inside the object**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3272274c-d0fe-4590-924f-3ac1b94d3745",
    "metadata": {},
    "outputs": [],
    "source": []
