--- a/day7_classes_objects_project.ipynb
+++ b/day7_classes_objects_project.ipynb
@@ -44,8 +44,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "08804c27-895c-46ba-9ae7-2e8e9790c266",
+   "execution_count": null,
+   "id": "3a5d0670-b38b-4444-bed7-a6fea67cce05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,43 +65,101 @@
     "def run_test(questions):\n",
     "    score = 0\n",
     "    for question in questions:             # question = (question_prompt, answer),,, This answer is what are inside \n",
-    "        answer = input(question_prompt)    # the questions object not the answer that users enter.\n",
+    "        answer = input(question.prompt)    # the questions object not the answer that users enter.\n",
     "        if answer == question.answer:      # question.answer refers to the answer inside the object\n",
     "            score += 1\n",
-    "    print(\"You got \" + str(score) + \"/\" + str(len(questions)) + \" correct\" )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "389e65e0-42f7-4224-99fb-51350e7436c9",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "['What color are apples?\\n(a) Red/Green\\n(b) Purple\\n(c) Orange\\n\\n', 'What color are bananas?\\n(a) Teal\\n(b) Magenta\\n(c) Yellow\\n\\n', 'What color are strawberries?\\n(a) Yellow\\n(b) Red\\n(c) Blue\\n\\n'] a\n",
-      "['What color are apples?\\n(a) Red/Green\\n(b) Purple\\n(c) Orange\\n\\n', 'What color are bananas?\\n(a) Teal\\n(b) Magenta\\n(c) Yellow\\n\\n', 'What color are strawberries?\\n(a) Yellow\\n(b) Red\\n(c) Blue\\n\\n'] c\n",
-      "['What color are apples?\\n(a) Red/Green\\n(b) Purple\\n(c) Orange\\n\\n', 'What color are bananas?\\n(a) Teal\\n(b) Magenta\\n(c) Yellow\\n\\n', 'What color are strawberries?\\n(a) Yellow\\n(b) Red\\n(c) Blue\\n\\n'] b\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You got 3/3 correct\n"
-     ]
-    }
-   ],
-   "source": [
+    "    print(\"You got \" + str(score) + \"/\" + str(len(questions)) + \" correct\" )\n",
+    "\n",
     "run_test(questions)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6258afee-1f46-427a-9cb0-6b04d67dac78",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45d24901-b2a3-4645-81bf-ed036b3a50a0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "c6ed1d2c-b201-48a9-a177-63726be07d11",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "What color are apples?\n",
+      "(a) Red/Green\n",
+      "(b) Purple\n",
+      "(c) Orange\n",
+      "\n",
+      " a\n",
+      "What color are bananas?\n",
+      "(a) Teal\n",
+      "(b) Magenta\n",
+      "(c) Yellow\n",
+      "\n",
+      " c\n",
+      "What color are strawberries?\n",
+      "(a) Yellow\n",
+      "(b) Red\n",
+      "(c) Blue\n",
+      "\n",
+      " c\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You got 2/3 correct\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Question:\n",
+    "    def __init__(self, prompt, answer):\n",
+    "        self.prompt = prompt\n",
+    "        self.answer = answer\n",
+    "\n",
+    "question_prompt = [\n",
+    "    \"What color are apples?\\n(a) Red/Green\\n(b) Purple\\n(c) Orange\\n\\n\",\n",
+    "    \"What color are bananas?\\n(a) Teal\\n(b) Magenta\\n(c) Yellow\\n\\n\",\n",
+    "    \"What color are strawberries?\\n(a) Yellow\\n(b) Red\\n(c) Blue\\n\\n\"\n",
+    "]\n",
+    "\n",
+    "questions = [\n",
+    "    Question(question_prompt[0], \"a\"),      # (\"What color are apples?\\n(a) Red/Green\\n(b) Purple\\n(c) Orange\\n\\n\", \"a\") = (prompt, answer)\n",
+    "    Question(question_prompt[1], \"c\"),   \n",
+    "    Question(question_prompt[2], \"b\")\n",
+    "]\n",
+    "\n",
+    "def run_test(questions):\n",
+    "    score = 0\n",
+    "    for question in questions:             # question = (question_prompt, answer),,, This answer is what are inside \n",
+    "        answer = input(question.prompt)    # the questions object not the answer that users enter.\n",
+    "        if answer == question.answer:      # question.answer refers to the answer inside the object\n",
+    "            score += 1\n",
+    "    print(\"You got \" + str(score) + \"/\" + str(len(questions)) + \" correct\" )\n",
+    "\n",
+    "run_test(questions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1debcce3-7595-405d-ad06-515639d67039",
    "metadata": {},
    "outputs": [],
    "source": []
